fixed banner image stretching issue

--- a/Design-Diagram-Templates/templates/css/index.scss
+++ b/Design-Diagram-Templates/templates/css/index.scss
@@ -238,6 +238,7 @@ header{
     width:80%;
     margin:auto;
     max-width:1500px;
+    min-height:70vh;
 }
 
 // End Container
